style.css
/* ... */
.visually-hidden {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.2;
}

.h1,
h1 {
  font-family: "Outfit", sans-serif;
  font-size: 4rem;
  font-size: clamp(4rem, -0.01117734724292152rem + 8.345752608047691vw, 7.5rem);
  line-height: 1;
  letter-spacing: -3px;
}

@media (max-width: 768px) {
  .h1,
  h1 {
    font-size: 3rem;
    font-size: clamp(3rem, 2.2857142857142856rem + 3.571428571428571vw, 4rem);
  }
}

.h2,
h2 {
  font-family: "Outfit", sans-serif;
  font-size: clamp(2.5rem, 1.5909090909090908rem + 4.545454545454546vw, 5rem);
  line-height: 55px;
  font-weight: 700;
  letter-spacing: -1px;
  margin-bottom: clamp(2rem, 1.4285714285714286rem + 2.857142857142857vw, 4rem);
}

.h3,
h3 {
  font-family: "Outfit", sans-serif;
  font-size: clamp(1.5rem, 1.3571428571428572rem + 0.7142857142857143vw, 2rem);
  margin-bottom: 1rem;
  font-weight: 600;
}

ul {
  margin: 0;
  padding: 0;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  color: inherit;
  transition: color 0.2s linear;
}

p {
  font-size: clamp(1rem, 0.3846153846153846rem + 0.9615384615384616vw, 1.25rem);
  line-height: 1.78;
  margin: 0 0 1rem 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

button {
  font-family: "Hanken Grotesk", sans-serif;
  cursor: pointer;
  border: none;
}

.button {
  width: fit-content;
  min-width: 118.31px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  z-index: 2;
  color: var(--white);
  background-color: var(--accent-color);
  /* border-radius: 999px; */
  border-radius: 0.875rem;
  padding: 12px 16px;
  font-size: clamp(
    1rem,
    1.0340909090909092rem + 0.45454545454545453vw,
    1.25rem
  );
  font-weight: 400;
  overflow: hidden;
  transition: background-color 0.2s linear, box-shadow 0.2s ease-in-out;
}

.button:hover {
  background-color: var(--purple-shade);
  /* box-shadow: 0px 6px 0 0 var(--purple-shade); */
}

.button.dark {
  background-color: var(--accent-color-dk);
}

.button.dark:hover {
  background-color: var(--purple-shade-dk);
  /* box-shadow: 0px 6px 0 0 var(--purple-shade-dk); */
}

.link {
  display: flex;
  align-items: center;
  gap: 4px;
}

.link.dark {
  color: var(--white);
}

/* --------------------------------- ANIMATIONS -------------------------------- */
.fade-in {
  animation: fade-in 0.5s ease-in-out;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.scale-up {
  animation: scale-up 0.8s cubic-bezier(0.4, 0, 0.2, 1);
}

@keyframes scale-up {
  0% {
    scale: 0.5;
  }
  100% {
    scale: 1;
  }
}

/* header logo */
.rotating {
  animation: rotating 4s infinite linear;
}

@keyframes rotating {
  0% {
    transform: rotate(0);
  }
  50% {
    transform: rotate(-45deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

/* dark mode ball */
@keyframes ball-trail-left {
  0% {
    box-shadow: 0px 0px 0px 0px var(--white);
  }
  30% {
    box-shadow: -4px 0px 0px 0px rgba(255, 255, 255, 0.8),
      -8px 0px 0px 0px rgba(255, 255, 255, 0.6);
  }
  100% {
    box-shadow: 0px 0px 0px 0px var(--white);
  }
}

@keyframes ball-trail-right {
  0% {
    box-shadow: 0px 0px 0px 0px var(--white);
  }
  30% {
    box-shadow: 4px 0px 0px 0px rgba(255, 255, 255, 0.8),
      8px 0px 0px 0px rgba(255, 255, 255, 0.6);
  }
  100% {
    box-shadow: 0px 0px 0px 0px var(--white);
  }
}

/* ----------------------------------------------------------------------------- */

/*  -------------------------------- CONTAINER WRAPPER ------------------------- */

.container {
  width: 100%;
  padding-right: 1rem;
  padding-left: 1rem;
  margin-left: auto;
  margin-right: auto;
  position: inherit;
  width: min(100% - 64px, 1440px);
  margin-inline: auto;
}

/*  --------------------------------------------------------------------------- */

/*  ---------------------------------- HEADER --------------------------------- */

.header {
  display: flex;
  align-items: center;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 999;
  background-color: var(--bg-light1);
  padding: 12px 0;
  transition: background-color 0.4s linear, transform 0.4s ease;
}

.header.dark {
  background-color: var(--bg-night2);
  color: var(--white);
}

.header.opaque {
  transform: translateY(-100%);
}

.navbar {
  position: relative;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.navbar.container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  display: flex;
  align-items: center;
  position: relative;
}

.logo:hover > .logo-img {
  scale: 1;
}

.logo-img {
  width: 45px;
  scale: 0;
  transition: scale 0.3s ease-in-out;
}

.author-name {
  color: var(--black);
  height: fit-content;
  font-family: "Outfit", sans-serif;
  font-size: clamp(
    1.25rem,
    1.1590909090909092rem + 0.45454545454545453vw,
    1.375rem
  );
  font-weight: 700;
  line-height: 1;
  cursor: pointer;
  user-select: none;
  margin-right: 1rem;
  transition: color 0.2s linear;
}

.author-name.dark {
  color: var(--white);
}

.header-ul {
  display: flex;
  /* gap: 20px; */
  font-size: clamp(
    1.125rem,
    1.0795454545454546rem + 0.22727272727272727vw,
    1.25rem
  );
  padding-inline-start: 0px;
  margin: 0;
}

.header-li {
  display: flex;
  align-items: center;
  margin-left: 20px;
  position: relative;
}

.nav-link-header {
  color: var(--black);
  font-weight: 700;
  padding: 4px 8px;
  border-radius: 0.375rem;
  transition: color 0.2s linear, background-color 0.4s linear;
}

.nav-link-header.dark {
  color: var(--white);
}

.nav-link-header:hover:not(.active) {
  color: var(--accent-color);
  transition: all 0.2s linear;
}

.nav-link-header.dark:hover:not(.active) {
  color: var(--accent-color-dk);
  transition: all 0.2s linear;
}
/* ... */

